--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,5 @@ edition = "2021"
 [dependencies]
 bevy = "0.12"
 bevy_rapier3d = "0.23"
-bevy_mod_picking = "0.17"
+bevy_mod_picking = { version = "0.17", features = ["backend_rapier"] }
 bevy_panorbit_camera = "0.10"
