--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ bevy = "0.12"
 bevy_rapier3d = "0.23"
 bevy_mod_picking = { version = "0.17", features = ["backend_rapier"] }
 bevy_panorbit_camera = "0.10"
+rand = "0.8"
