--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ bevy_panorbit_camera = "0.10"
 rand = "0.8"
 bevy-inspector-egui = "0.22"
 bevy_egui = "0.24"
+bevy_common_assets = { version = "0.9", features = ["toml"] }
+serde = "1.0"
