fixed rotation of path

--- a/assets/levels/03.level.toml
+++ b/assets/levels/03.level.toml
@@ -17,4 +17,4 @@ map = [
     [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],
 ] 
 rounds = 3
-last_level = false
+last_level = true
