--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 bevy = "0.12"
-bevy_rapier3d = "0.23"
+bevy_rapier3d = "0.24"
 bevy_mod_picking = { version = "0.17", features = [
     "backend_egui",
     "backend_rapier",
@@ -18,3 +18,4 @@ bevy-inspector-egui = "0.22"
 bevy_egui = "0.24"
 bevy_common_assets = { version = "0.9", features = ["toml"] }
 serde = "1.0"
+oxidized_navigation = { version = "0.9", features = ["debug_draw", "rapier"] }
