--- a/assets/levels/03.level.toml
+++ b/assets/levels/03.level.toml
@@ -1,20 +1,38 @@
-map = [
-    [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],
-    [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],
-    [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],
-    [ 0,  0,  0,  0,  0, 26, 27, 28, 29, 30, 31, 32,  0,  0,  0,  0],
-    [ 0,  0,  0,  0,  0, 25,  0,  0,  0,  0,  0, 33,  0,  0,  0,  0],
-    [ 0,  0,  0,  0,  0, 24,  0,  0,  0,  0,  0, 34,  0,  0,  0,  0],
-    [ 0,  0,  0,  0,  0, 23,  0,  0,  0,  0,  0, 35, 36, 37, 38,  0],
-    [ 0,  0,  0,  0,  0, 22,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],
-    [ 0,  0,  0,  0,  0, 21, 20, 19, 18, 17,  0,  0,  0,  0,  0,  0],
-    [ 0,  0,  0,  0,  0,  0,  0,  0,  0, 16,  0,  0,  0,  0,  0,  0],
-    [ 0,  1,  2,  3,  0,  0,  0,  0,  0, 15,  0,  0,  0,  0,  0,  0],
-    [ 0,  0,  0,  4,  0,  0,  0,  0,  0, 14,  0,  0,  0,  0,  0,  0],
-    [ 0,  0,  0,  5,  0,  0,  0,  0,  0, 13,  0,  0,  0,  0,  0,  0],
-    [ 0,  0,  0,  6,  7,  8,  9, 10, 11, 12,  0,  0,  0,  0,  0,  0],
-    [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],
-    [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],
-] 
+path = [
+    [0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],
+    [0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],
+    [0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],
+    [0,  0,  0,  0,  0, 26, 27, 28, 29, 30, 31, 32,  0,  0,  0,  0],
+    [0,  0,  0,  0,  0, 25,  0,  0,  0,  0,  0, 33,  0,  0,  0,  0],
+    [0,  0,  0,  0,  0, 24,  0,  0,  0,  0,  0, 34,  0,  0,  0,  0],
+    [0,  0,  0,  0,  0, 23,  0,  0,  0,  0,  0, 35, 36, 37, 38,  0],
+    [0,  0,  0,  0,  0, 22,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],
+    [0,  0,  0,  0,  0, 21, 20, 19, 18, 17,  0,  0,  0,  0,  0,  0],
+    [0,  0,  0,  0,  0,  0,  0,  0,  0, 16,  0,  0,  0,  0,  0,  0],
+    [0,  1,  2,  3,  0,  0,  0,  0,  0, 15,  0,  0,  0,  0,  0,  0],
+    [0,  0,  0,  4,  0,  0,  0,  0,  0, 14,  0,  0,  0,  0,  0,  0],
+    [0,  0,  0,  5,  0,  0,  0,  0,  0, 13,  0,  0,  0,  0,  0,  0],
+    [0,  0,  0,  6,  7,  8,  9, 10, 11, 12,  0,  0,  0,  0,  0,  0],
+    [0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],
+    [0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],
+]
+heights = [
+    [0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],
+    [0,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  0],
+    [0,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  0],
+    [0,  1,  1,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  1,  1,  0],
+    [0,  1,  1,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  1,  1,  0],
+    [0,  1,  1,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  1,  1,  0],
+    [0,  1,  1,  2,  2,  2,  3,  3,  3,  3,  2,  2,  2,  1,  1,  0],
+    [0,  1,  1,  2,  2,  2,  3,  3,  3,  3,  2,  2,  2,  1,  1,  0],
+    [0,  1,  1,  2,  2,  2,  3,  3,  3,  3,  2,  2,  2,  1,  1,  0],
+    [0,  1,  1,  2,  2,  2,  3,  3,  3,  3,  2,  2,  2,  1,  1,  0],
+    [0,  1,  1,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  1,  1,  0],
+    [0,  1,  1,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  1,  1,  0],
+    [0,  1,  1,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  1,  1,  0],
+    [0,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  0],
+    [0,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  0],
+    [0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],
+]
 rounds = 3
 last_level = true
